--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,35 +1,44 @@
 <div class='row m-0 w-100'>
-    <div class='col-md-4 offset-4 mt-3' *ngIf='!this.isLogin'>
-        <h4>Regisztráció</h4>
-        <form #myform="ngForm" (ngSubmit)="onSubmit(myform)">
-            <div class='form-group'>
+  <div class='col-md-4 offset-4 mt-3' *ngIf='!this.isLogin'>
+    <h4>Regisztráció</h4>
 
-            
-                <input class='form-control mt-3' type="text" name="name" 
-                placeholder="Név" [ngClass]="{'is-invalid':this.myform.errors}"/>
-                <div *ngIf="this.myform.errors" class="invalid-feedback">
-                    <div *ngIf="this.myform.errors.required">A mező kitöltése kötelező!</div>
-                </div>
-            
+    <p *ngIf="msg" class="alert alert-success">{{ msg }}</p>
+    <p *ngIf="errorMessage" class="alert alert-danger">{{ errorMessage }}</p>
 
-            </div>
-            <div class='form-group'>
-                <input class='form-control mt-3' type="text" name="username" required placeholder="Felhasználónév" ngModel>
-            </div>
-            <div class='form-group'>
-                <input class='form-control mt-3' type="email" name="email" placeholder="Email" ngModel>
-            </div>
-            <div class='form-group'>
-                <input class='form-control mt-3' type="number" name="phone" placeholder="Telefonszám" ngModel>
-            </div>
-            <div class='form-group'>
-                <input class='form-control mt-3' type="password" name="password" placeholder="Jelszó" ngModel>
-            </div>
-            <input class='btn btn-danger col-xs-2 my-2 mt-3' type="submit" value="Regisztráció">
-            <p>{{msg}}</p>
-        </form>
-    </div>
-    <div class='col-md-4 offset-4 mt-5' *ngIf='this.isLogin'>
-        <h1>Már van regisztrációd</h1>
-    </div>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <div class='form-group'>
+        <input class='form-control mt-3' type="text" placeholder="Név" formControlName="name" [ngClass]="{'is-invalid': false}"/>
+      </div>
+      <div class='form-group'>
+        <input class='form-control mt-3' type="text" formControlName="username" placeholder="Felhasználónév">
+        <div *ngIf="usernameInput.invalid && (usernameInput.dirty || usernameInput.touched)" class="text-danger small">
+          <span *ngIf="usernameInput.errors.required">kötelező input</span>
+        </div>
+        <div *ngIf="usernameInput.valid && (usernameInput.dirty || usernameInput.touched)" class="text-success small">valid input</div>
+      </div>
+      <div class='form-group'>
+        <input class='form-control mt-3' type="email" formControlName="email" placeholder="Email">
+        <div *ngIf="emailInput.invalid && (emailInput.dirty || emailInput.touched)" class="text-danger small">
+          <span *ngIf="emailInput.errors.required">kötelező input</span>
+          <span *ngIf="emailInput.errors.email">helytelen email formátum</span>
+        </div>
+        <div *ngIf="emailInput.valid && (emailInput.dirty || emailInput.touched)" class="text-success small">valid input</div>
+      </div>
+      <div class='form-group'>
+        <input class='form-control mt-3' type="number" formControlName="phone" placeholder="Telefonszám">
+      </div>
+      <div class='form-group'>
+        <input class='form-control mt-3' type="password" formControlName="password" placeholder="Jelszó">
+      </div>
+      <input class='btn btn-danger col-xs-2 my-2 mt-3' type="submit" value="Regisztráció">
+      <p>{{ form.value | json }}</p>
+      <p>Form status: {{ form.valid ? 'Valid' : 'Invalid' }}</p>
+    </form>
+  </div>
+  <div class='col-md-4 offset-4 mt-5' *ngIf='this.isLogin'>
+    <h1>
+      Már van regisztrációd<br>
+      Én a hejedben ebben az esetben átirányítanám a Usert egy másik oldalra. Pl profil oldalra.
+    </h1>
+  </div>
 </div>
